--- a/stock_control/templates/register.html
+++ b/stock_control/templates/register.html
@@ -3,14 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{url_for('static', filename="css/register.css")}}">
     <title>Register</title>
 </head>
 <body>
-    <form method="POST">
-        <input type="text" name="username" placeholder="Usuário" required>
-        <input type="password" name="password" placeholder="Senha" required>
-        <button type="submit">Cadastrar</button>
-    </form>
-    <a href="{{ url_for('login') }}">Voltar ao login</a>    
+    <main>
+        <h1>Cadastro 📝</h1>
+        <form method="POST">
+            <input type="text" name="username" placeholder="Usuário" required>
+            <input type="email" name="email" placeholder="E-mail" required>
+            <input type="password" name="password" placeholder="Senha" required>
+            <button type="submit">Cadastrar</button>
+        </form>
+        <a href="{{ url_for('login') }}">Voltar ao login</a>
+    </main>
 </body>
 </html>
